<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2" xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="ime_name">kasahorow</string>
    <string name="settings_app_name">kasahorow Settings</string>
    <string name="spell_checker_service_name">kasahorow Spell Checker</string>
    <string name="spell_checker_settings">kasahorow Speller Settings</string>
    <string name="subtype_generic">speller-generic</string>
    <string name="copyright_text">Copyright © <xliff:g id="year">%s</xliff:g><xliff:g id="owner">%s</xliff:g></string>
    <string name="version_text"><xliff:g id="version_name">%s</xliff:g> (v<xliff:g id="version_number">%s</xliff:g>)</string>
    <string name="additional_licenses"><u>Additional licenses…</u></string>
    <string name="debug_tracing_starting">Tracing started!\nMake sure you stop it at some point</string>
    <string name="debug_tracing_starting_failed">Tracing initiating failed! Check logcat for details.</string>
    <string name="debug_tracing_finished">Tracing finished!\nTrace file is<xliff:g id="trace_file">%s</xliff:g></string>
    <string name="click_to_restart_suggestions">Click for suggestions</string>
    <string name="tips_notification_text">Click for tips!</string>
    <string name="tips_button">How to use</string>
    <string name="tips_button_description">A few tips about how to use kasahorow</string>
    <string name="tips_title">kasahorow tips</string>
    <string name="click_for_previous_tip">↓ Previous tip</string>
    <string name="click_for_next_tip">Next tip ↓</string>
    <string name="tip_1_welcome_to_ask">Welcome to kasahorow!</string>
    <string name="tip_1_how_to_access_settings">To access the settings; long press the ENTER key. You\'ll find a world
        of customizations there!</string>
    <string name="tip_2_gestures">I support gestures!</string>
    <string name="tip_2_gestures_tip">With a swipe, you can do a lot! Swipe from left to right will switch languages,
        swiping to the left will switch to symbols layout, swiping from the spacebar up will show up a utility keyboard,
        and swiping down will hide the keyboard.\nIt is configurable in the settings (remember? Long pressing the ENTER
        key).</string>
    <string name="tip_3_hidden_kbds">Hidden gems</string>
    <string name="tip_3_hidden_kbds_tip">There are some hidden keyboards:\n1) Swipe your finger from the spacebar and
        up, you\'ll get a utility keyboard with arrows and microphone (for voice input).\n2) Swipe your finger up
        outside the keyboard, and keep it pressed. This is the extension keyboard, with numbers and symbols.</string>
    <string name="tip_4_top_generic_row">Top row</string>
    <string name="tip_4_top_generic_row_tip">The top row is the same on all layouts, and it can be changed! The default
        top row includes symbols key (<i>123</i>), left and right arrow keys, and language key (<i>ABC</i>). You can
        replace this row in settings.</string>
    <string name="tip_4_top_generic_row_go_to_top_row_settings">Change top row now</string>
    <string name="tip_5_key_feedback">Feedback</string>
    <string name="tip_5_key_feedback_tip">Sometimes it is nice to get a non-visual feedback about key presses. I support
        that. So here you go, you can have vibration or sound, or both.</string>
    <string name="tip_5_key_feedback_test">Want to test the feedback?</string>
    <string name="tip_6_bottom_rows">Bottom row</string>
    <string name="tip_6_bottom_rows_tip">As the top row, the bottom row can also be replaced. kasahorow has
        several types - with or without a mic, iPhone style, etc.</string>
    <string name="tip_6_top_generic_row_go_to_bottom_row_settings">Change bottom row now</string>
    <string name="tip_7_voice_input">Talk to me*</string>
    <string name="tip_7_voice_input_tip">Typing is nice, but there is also support for voice input! Want to dictate the
        text? Click the microphone key, and talk away!\nThis feature uses Google\'s state-of-the-art voice recognition
        technology, so be sure it works :)</string>
    <string name="tip_7_voice_input_tip_dont_forget_bottom_row">If you want to always have the mic icon, make sure you
        have the correct bottom row (previous tip, remember?).\nAnyway, mic is always accessible via the hidden utility
        keyboard (swipe up from the spacebar).</string>
    <string name="tip_7_voice_input_tip_note">* Requires Android 2.2+ and Internet connection to work.</string>
    <string name="tip_8_suggestions">I complete you</string>
    <string name="tip_8_suggestions_tip">Depending on you language support level, kasahorow can help you finish
        your words and correct your typos. As you start typing, kasahorow will suggest words based on what you
        already typed.</string>
    <string name="tip_8_suggestions_editor">If I don\'t know a word, you can teach me! Type that word, and click it in
        the suggestions strip. I\'ll remember it.\nYou can also edit those User-Words in our built-in editor. Look for
        the editor in kasahorow Dictionary Settings.</string>
    <string name="tip_9_suggestions_restart">Suggestions Restarting</string>
    <string name="tip_9_suggestions_restart_tip">kasahorow provides word completion suggestions based on what you
        typed. But, kasahorow can also provide suggestions on already typed words! Tap the word, and
        kasahorow will refresh the suggestions strip.</string>
    <string name="main_tab_welcome">Welcome</string>
    <string name="main_tab_links">Links</string>
    <string name="main_tab_credits">Credits</string>
    <string name="how_to_pointer_title">Welcome to kasahorow</string>
    <string name="how_to_pointer_version_prefix">Version:</string>
    <string name="how_to_pointer_not_app">kasahorow is not a regular application - it is a on-screen keyboard
        replacement.</string>
    <string name="how_to_pointer_go_to_links">For further information, go to the Links tab.</string>
    <string name="how_to_pointer_how_to_url">Details about how to use this keyboard:</string>
    <string name="how_to_pointer_site">General details:</string>
    <string name="how_to_pointer_changelog">Details about the latest version:</string>
    <string name="how_to_pointer_issues">Bug reporting:</string>
    <string name="main_tab_credits_title">This application was created with the help of the following people-</string>
    <string name="main_tab_credits_created_by">Created by:</string>
    <string name="main_tab_credits_additional_work_by">Additional coding work by:</string>
    <string name="main_tab_credits_localization_by">Localization efforts by:</string>
    <string name="main_tab_credits_GUI_by">UI images by:</string>
    <string name="how_to_enable_dialog_title">Enable kasahorow\?</string>
    <string name="how_to_enable_dialog_text">kasahorow is not activated yet. Do you want me to show you how to
        activate?</string>
    <string name="how_to_enable_dialog_show_me">Show me!</string>
    <string name="how_to_enable_dialog_dont_show_me">Later</string>
    <string name="how_to_simple_howto_preface">Android requires that you (the user) will manually enable and activate
        external keyboards. Here is how:</string>
    <string name="how_to_simple_howto_enable_ask">Step 1: Enable kasahorow (it will warn you about possible
        key-logging, don\'t worry, kasahorow does not keep data, and does not send it anywhere) :</string>
    <string name="how_to_simple_howto_enable_ask_button">Enable kasahorow</string>
    <string name="how_to_simple_howto_press_back_to_return_tip">Press BACK once done, to get back to activation
        instructions</string>
    <string name="how_to_simple_howto_switch_to_ask">Step 2: Select kasahorow as your active Input Method:</string>
    <string name="how_to_simple_howto_switch_to_ask_button_after_step_1">Switch to kasahorow</string>
    <string name="how_to_simple_howto_switch_to_ask_button_before_step_1">First do step 1</string>
    <string name="how_to_simple_howto_go_to_settings">Step 3 (optional): kasahorow is very customizable. Change
        stuff! You can do that later by long-press the ENTER key.</string>
    <string name="how_to_simple_howto_go_to_settings_button">kasahorow\'s settings</string>
    <string name="ime_name_beta">kasahorow BETA</string>
    <string name="notification_text_testers">This is a beta version. Use with caution!</string>
    <string name="notification_text_changelog">Click to learn what\'s new.</string>
    <string name="notification_title_how_to_enable">Welcome to kasahorow</string>
    <string name="notification_text_how_to_enable">Learn how to enable</string>
    <string name="testers_version">Testers build!</string>
    <string name="license_title">License</string>
    <string name="languages_cat">Languages</string>
    <string name="about">About</string>
    <string name="changelog">Changelog</string>
    <string name="search_market_for_addons">Search for add-ons</string>
    <string name="no_market_store_available">Could not find Android Play Store on your device. Unable to search for
        add-ons!</string>
    <string name="theme_addons_settings">Keyboard theme settings</string>
    <string name="keyboard_theme_tweak_group">Tweaks</string>
    <string name="keyboard_theme_tweak_hints_group">Hint text tweaks</string>
    <string name="bottom_row_addons_settings">Bottom row settings</string>
    <string name="top_row_addons_settings">Top row settings</string>
    <string name="close_button">Close</string>
    <string name="how_to_active_text">How to active kasahorow</string>
    <string name="added_word">Saved:<xliff:g id="word">%s</xliff:g></string>
    <string name="revert_added_word_question">Remove\?</string>
    <string name="removed_word">Removed:<xliff:g id="word">%s</xliff:g></string>
    <string name="hint_add_to_dictionary">\u2190 Touch again to save</string>
    <string name="hint_double_tap_to_close">Again to remove suggestions</string>
    <string name="menu_insert_smiley">Insert emoticon</string>
    <string name="click_for_help">Help</string>
    <string name="click_for_help_summary">Additional help about kasahorow</string>
    <string name="ui_group">User interface</string>
    <string name="physical_keyboard_change_notification_title">Keyboard layout notification</string>
    <string name="physical_keyboard_change_notification_summary">Type of notification about the active layout. Now: %s</string>
    <string name="physical_keyboard_change_notification_dialog_title">Select notification type</string>
    <string-array name="physical_keyboard_change_notification_types">
        <item>Always show layout icon</item>
        <item>On physical keyboard change</item>
        <item>No notification</item>
    </string-array>
    <string name="lengthy_operations_toast_notification">Notify on lengthy operations</string>
    <string name="eng_keyboard">English</string>
    <string name="ak_keyboard">Akan keyboard</string>
    <string name="ak_desc">Akan keyboard layout.</string>
    <string name="ga_keyboard">Ga keyboard</string>
    <string name="ga_desc">Ga keyboard layout.</string>
    <string name="ee_keyboard">Gbe keyboard</string>
    <string name="ee_desc">Gbe keyboard layout.</string>
    <string name="ha_keyboard">Hausa keyboard</string>
    <string name="ha_desc">Hausa keyboad layout.</string>
    <string name="yo_keyboard">Yoruba keyboard</string>
    <string name="yo_desc">Yoruba keyboad layout.</string>
    <string name="kik_desc">Gikuyu keyboard layout</string>
    <string name="kik_keyboard">Gikuyu keyboard</string>
    <string name="buy_dictionary_summary">Using Google Play Store\'s secure in-app payment.</string>
    <string name="ui_dialog_buy_dictionary_message">Please select the dictionary you want to buy:</string>
    <string name="empty_list">You have purchased all available dictionaries. Thank you</string>
</resources>