<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:paddingTop="25dp"
              android:layout_height="match_parent">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/buy_dictionary_summary"
            android:id="@+id/buy_dictionary_summary"
            android:layout_gravity="center"
            android:textStyle="bold"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/ui_dialog_buy_dictionary_message"
            android:id="@+id/buy_dictionary_instructions"
            android:layout_gravity="center"/>
    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <ListView
                android:id="@id/android:list"
                style="@style/ListView"/>

        <TextView
                android:id="@id/android:empty"
                style="@style/EmptyList"
                android:visibility="gone"
                android:text="@string/empty_list"/>
    </RelativeLayout>
</LinearLayout>